# ChangeLog for dev-libs/boehm-gc
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/boehm-gc/ChangeLog,v 1.75 2010/01/11 03:25:55 matsuu Exp $

*boehm-gc-7.2_alpha4 (11 Jan 2010)

  11 Jan 2010; MATSUU Takuto <matsuu@gentoo.org>
  +boehm-gc-7.2_alpha4.ebuild:
  Version bumped, bug 300354.

  14 Dec 2009; Brent Baude <ranger@gentoo.org> boehm-gc-7.1.ebuild:
  stable ppc64, bug 284857

  24 Oct 2009; nixnut <nixnut@gentoo.org> boehm-gc-7.1.ebuild:
  ppc stable #284857

  20 Oct 2009; Markus Meier <maekke@gentoo.org> boehm-gc-7.1.ebuild:
  amd64/x86 stable, bug #284857

  18 Oct 2009; Tobias Klausmann <klausman@gentoo.org> boehm-gc-7.1.ebuild:
  Stable on alpha, bug #284857

  23 Sep 2009; Patrick Lauer <patrick@gentoo.org> boehm-gc-6.8.ebuild,
  boehm-gc-7.0-r1.ebuild, boehm-gc-7.1.ebuild:
  Remove virtual/libc

*boehm-gc-7.1 (17 May 2008)

  17 May 2008; MATSUU Takuto <matsuu@gentoo.org> -boehm-gc-6.5.ebuild,
  -boehm-gc-6.7.ebuild, boehm-gc-6.8.ebuild, -boehm-gc-7.0.ebuild,
  +boehm-gc-7.1.ebuild:
  Version bumped. Removed old versions.

  17 Jan 2008; Jeroen Roovers <jer@gentoo.org> boehm-gc-6.8.ebuild:
  Stable for HPPA too.

  05 Oct 2007; Tom Gall <tgall@gentoo.org> boehm-gc-6.8.ebuild:
  stable on ppc64

  25 Aug 2007; Steve Dibb <beandog@gentoo.org> boehm-gc-6.8.ebuild:
  amd64 stable

*boehm-gc-7.0-r1 (19 Aug 2007)

  19 Aug 2007; MATSUU Takuto <matsuu@gentoo.org> +boehm-gc-7.0-r1.ebuild:
  Fixed bug #187379.

  13 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org> boehm-gc-6.8.ebuild:
  ppc. stable

  09 Aug 2007; Gustavo Zacarias <gustavoz@gentoo.org> boehm-gc-6.8.ebuild:
  Stable on sparc

*boehm-gc-7.0 (19 Jul 2007)

  19 Jul 2007; MATSUU Takuto <matsuu@gentoo.org> +boehm-gc-7.0.ebuild:
  Version bumped.

  03 Jul 2007; Raúl Porcel <armin76@gentoo.org> boehm-gc-6.8.ebuild:
  alpha/ia64/x86 stable

  11 Feb 2007; Fabian Groffen <grobian@gentoo.org> boehm-gc-6.5.ebuild,